5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3998/executions/1745_1521.log
== TEST (2019-05-15 14:18:45) 
-- CODE:
n = int(input("capaciade do containers: "))
e = int(input("estoque inicial: "))
q = int(input("quantidade de containers que chegam a cada semana: "))
soma = 0
i = 0 #variavel contadora de semanas

while(e > n):
	soma = e - q
	i = i +1
print(i)
-- OUTPUT:
60
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:19:32) 
-- CODE:
n = int(input("capaciade do containers: "))
e = int(input("estoque inicial: "))
q = int(input("quantidade de containers que chegam a cada semana: "))
soma = 0
i = 0 #variavel contadora de semanas

while(e > n):
	soma = e - q
	i = i +1
	print(i)
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:32:50) 
-- CODE:
n = int(input("capaciade do containers: "))
e = int(input("estoque inicial: "))
q = int(input("quantidade de containers que chegam a cada semana: "))
soma = 0
i = 0 #variavel contadora de semanas

while(n>q):
	soma = n - q
	i = i +1
print(i)
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:32:54) 
-- CODE:
n = int(input("capaciade do containers: "))
e = int(input("estoque inicial: "))
q = int(input("quantidade de containers que chegam a cada semana: "))
soma = 0
i = 0 #variavel contadora de semanas

while(n>q):
	soma = n - q
	i = i +1
print(i)
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:33:35) 
-- CODE:
n = int(input("capaciade do containers: "))
e = int(input("estoque inicial: "))
q = int(input("quantidade de containers que chegam a cada semana: "))
soma = 0
i = 0 #variavel contadora de semanas

while(n>q):
	soma = n - q
	i = i +1
print(i)
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:33:38) 
-- CODE:
n = int(input("capaciade do containers: "))
e = int(input("estoque inicial: "))
q = int(input("quantidade de containers que chegam a cada semana: "))
soma = 0
i = 0 #variavel contadora de semanas

while(n>q):
	soma = n - q
	i = i +1
print(i)
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:33:39) 
-- CODE:
n = int(input("capaciade do containers: "))
e = int(input("estoque inicial: "))
q = int(input("quantidade de containers que chegam a cada semana: "))
soma = 0
i = 0 #variavel contadora de semanas

while(n>q):
	soma = n - q
	i = i +1
print(i)
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 14:33:39) 
-- CODE:
n = int(input("capaciade do containers: "))
e = int(input("estoque inicial: "))
q = int(input("quantidade de containers que chegam a cada semana: "))
soma = 0
i = 0 #variavel contadora de semanas

while(n>q):
	soma = n - q
	i = i +1
print(i)
-- EXECUTION TIME:
0.0352511
-- ERROR:
Error response from daemon: Container f5948d7470be7585c159e8e9dcb7863105aed719045aea10f629df65769ea1b9 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:33:40) 
-- CODE:
n = int(input("capaciade do containers: "))
e = int(input("estoque inicial: "))
q = int(input("quantidade de containers que chegam a cada semana: "))
soma = 0
i = 0 #variavel contadora de semanas

while(n>q):
	soma = n - q
	i = i +1
print(i)
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 14:34:14) 
-- CODE:
n = int(input("capaciade do containers: "))
e = int(input("estoque inicial: "))
q = int(input("quantidade de containers que chegam a cada semana: "))
soma = 0
i = 0 #variavel contadora de semanas

while(n>q):
	soma = n - q
	i = i +1

print(i)

-- EXECUTION TIME:
0.042927
-- ERROR:
Error response from daemon: Container f5948d7470be7585c159e8e9dcb7863105aed719045aea10f629df65769ea1b9 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:34:15) 
-- CODE:
n = int(input("capaciade do containers: "))
e = int(input("estoque inicial: "))
q = int(input("quantidade de containers que chegam a cada semana: "))
soma = 0
i = 0 #variavel contadora de semanas

while(n>q):
	soma = n - q
	i = i +1

print(i)

-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 14:34:33) 
-- CODE:
n = int(input("capaciade do containers: "))
e = int(input("estoque inicial: "))
q = int(input("quantidade de containers que chegam a cada semana: "))
soma = 0
i = 0 #variavel contadora de semanas

while(n>q):
	soma = n - q
	i = i +1

print(i)

-- EXECUTION TIME:
0.0256329
-- ERROR:
Error response from daemon: Container f5948d7470be7585c159e8e9dcb7863105aed719045aea10f629df65769ea1b9 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:34:34) 
-- CODE:
n = int(input("capaciade do containers: "))
e = int(input("estoque inicial: "))
q = int(input("quantidade de containers que chegam a cada semana: "))
soma = 0
i = 0 #variavel contadora de semanas

while(n>q):
	soma = n - q
	i = i +1

print(i)

-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:35:07) 
-- CODE:
n = int(input("capaciade do containers: "))
e = int(input("estoque inicial: "))
q = int(input("quantidade de containers que chegam a cada semana: "))
soma = 0
i = 0 #variavel contadora de semanas

while(n>q):
	soma = soma + (n - q)
	i = i +1
print(i)

-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 14:35:13) 
-- CODE:
n = int(input("capaciade do containers: "))
e = int(input("estoque inicial: "))
q = int(input("quantidade de containers que chegam a cada semana: "))
soma = 0
i = 0 #variavel contadora de semanas

while(n>q):
	soma = soma + (n - q)
	i = i +1
print(i)

-- EXECUTION TIME:
0.0455132
-- ERROR:
Error response from daemon: Container f5948d7470be7585c159e8e9dcb7863105aed719045aea10f629df65769ea1b9 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:37:18) 
-- CODE:
n = int(input("capaciade do containers: "))
e = int(input("estoque inicial: "))
q = int(input("quantidade de containers que chegam a cada semana: "))
soma = 0
i = 0 #variavel contadora de semanas

while(n>q):
	soma = soma + (n - q)
	i = i +1
print(i)

-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:37:18) 
-- CODE:
n = int(input("capaciade do containers: "))
e = int(input("estoque inicial: "))
q = int(input("quantidade de containers que chegam a cada semana: "))
soma = 0
i = 0 #variavel contadora de semanas

while(n>q):
	soma = soma + (n - q)
	i = i +1
print(i)

-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:38:17) 
-- CODE:
n = int(input("capaciade do containers: "))
e = int(input("estoque inicial: "))
q = int(input("quantidade de containers que chegam a cada semana: "))
soma = 0
i = 0 #variavel contadora de semanas

while(n>q):
	soma = soma + (n - q)
	i = i +1
print(i)

-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:39:16) 
-- CODE:
n = int(input("capaciade do containers: "))
e = int(input("estoque inicial: "))
q = int(input("quantidade de containers que chegam a cada semana: "))
soma = 0
i = 0 #variavel contadora de semanas

while(n>q):
	soma = soma + (n - q)
	i = i +1
print(i)

-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:57:26) 
-- CODE:
n = int(input("capaciade do containers: "))
e = int(input("estoque inicial: "))
q = int(input("quantidade de containers que chegam a cada semana: "))
soma = 0
i = 0 #variavel contadora de semanas

while(n>q):
	soma = soma + (n - q)
	i = i +1
print(i)

-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:58:22) 
-- CODE:
n = int(input("capaciade do containers: "))
e = int(input("estoque inicial: "))
q = int(input("quantidade de containers que chegam a cada semana: "))
soma = 0
i = 0 #variavel contadora de semanas

while(n>q):
	if(soma>n)
	soma = soma + (n - q)
	i = i +1
print(i)

-- ERROR:
File "XXXX", line 8
    if(soma>n)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:58:30) 
-- CODE:
n = int(input("capaciade do containers: "))
e = int(input("estoque inicial: "))
q = int(input("quantidade de containers que chegam a cada semana: "))
soma = 0
i = 0 #variavel contadora de semanas

while(n>q):
	if(soma>n):
	soma = soma + (n - q)
	i = i +1
print(i)

-- ERROR:
File "XXXX", line 9
    soma = soma + (n - q)
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:58:45) 
-- CODE:
n = int(input("capaciade do containers: "))
e = int(input("estoque inicial: "))
q = int(input("quantidade de containers que chegam a cada semana: "))
soma = 0
i = 0 #variavel contadora de semanas

while(n>q):
	soma = soma + (n - q)
	i = i +1
print(i)

-- ERROR:
File "XXXX", line 9
    soma = soma + (n - q)
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:06:05) 
-- CODE:
n = int(input("capaciade do containers: "))
e = int(input("estoque inicial: "))
q = int(input("quantidade de containers que chegam a cada semana: "))
soma = 0
i = 0 #variavel contadora de semanas

while(n>q):
	soma = (n * i)/n
	i= i + i
print(i)

-- ERROR:
File "XXXX", line 9
    soma = soma + (n - q)
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:06:19) 
-- CODE:
n = int(input("capaciade do containers: "))
e = int(input("estoque inicial: "))
q = int(input("quantidade de containers que chegam a cada semana: "))
soma = 0
i = 0 #variavel contadora de semanas

while(n>q):
	soma = (n * i)/n
	i= i + i
print(soma)

-- ERROR:
File "XXXX", line 9
    soma = soma + (n - q)
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:07:33) 
-- CODE:
n = int(input("capaciade do containers: "))
e = int(input("estoque inicial: "))
q = int(input("quantidade de containers que chegam a cada semana: "))
soma = 0
i = 0 #variavel contadora de semanas

while(n>q):
	soma = (soma * n )/n
	i= i + i
print(soma)

-- ERROR:
File "XXXX", line 9
    soma = soma + (n - q)
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:07:56) 
-- CODE:
n = int(input("capaciade do containers: "))
e = int(input("estoque inicial: "))
q = int(input("quantidade de containers que chegam a cada semana: "))
soma = 0
i = 0 #variavel contadora de semanas

while(n>q):
	soma = (soma * n )/n
	i= i + i
print(soma)

-- ERROR:
File "XXXX", line 9
    soma = soma + (n - q)
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:08:14) 
-- CODE:
n = int(input("capaciade do containers: "))
e = int(input("estoque inicial: "))
q = int(input("quantidade de containers que chegam a cada semana: "))
soma = 0
i = 0 #variavel contadora de semanas

while(n>q):
	soma = (soma * n )/n
	i= i + 1
print(i)

-- ERROR:
File "XXXX", line 9
    soma = soma + (n - q)
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:13:40) 
-- CODE:
n = int(input("capaciade do containers: "))
e = int(input("estoque inicial: "))
q = int(input("quantidade de containers que chegam a cada semana: "))

soma = 0 #variavel acumuladora
i = 0 #variavel contadora de semanas

while(e>n):
	soma = (soma * n )/n
	i = i + 1
print(i)

-- ERROR:
File "XXXX", line 9
    soma = soma + (n - q)
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:15:27) 
-- CODE:
n = int(input("capaciade do containers: "))
e = int(input("estoque inicial: "))

soma = 0 #variavel acumuladora
i = 0 #variavel contadora de semanas

while(e>n):
	soma = (soma * n )/n
	q= int(iput("quantidade de containers que chegam a cada semana"))
	soma = soma + q
	i = i + 1
print(i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    q= int(iput("quantidade de containers que chegam a cada semana"))
NameError: name 'iput' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:15:42) 
-- CODE:
n = int(input("capaciade do containers: "))
e = int(input("estoque inicial: "))

soma = 0 #variavel acumuladora
i = 0 #variavel contadora de semanas

while(e>n):
	soma = (soma * n )/n
	q= int(input("quantidade de containers que chegam a cada semana"))
	soma = soma + q
	i = i + 1
print(i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    q= int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:16:13) 
-- CODE:
n = int(input("capaciade do containers: "))
e = int(input("estoque inicial: "))

soma = 0 #variavel acumuladora
i = 0 #variavel contadora de semanas

while(e>n):
	soma = (soma * n )/n
	q= int(input("quantidade de containers que chegam a cada semana: "))
	soma = soma + q
	i = i + 1
print(i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    q= int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:16:46) 
-- CODE:
n = int(input("capaciade do containers: "))
e = int(input("estoque inicial: "))

soma = 0 #variavel acumuladora
i = 0 #variavel contadora de semanas

while(e>n):
	if(q<n)
	soma = (soma * n )/n
	q= int(input("quantidade de containers que chegam a cada semana: "))
	soma = soma + q
	i = i + 1
print(i)

-- ERROR:
File "XXXX", line 8
    if(q<n)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:16:52) 
-- CODE:
n = int(input("capaciade do containers: "))
e = int(input("estoque inicial: "))

soma = 0 #variavel acumuladora
i = 0 #variavel contadora de semanas

while(e>n):
	if(q<n):
	soma = (soma * n )/n
	q= int(input("quantidade de containers que chegam a cada semana: "))
	soma = soma + q
	i = i + 1
print(i)

-- ERROR:
File "XXXX", line 9
    soma = (soma * n )/n
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:18:01) 
-- CODE:
n = int(input("capaciade do containers: "))
e = int(input("estoque inicial: "))
q = int(input("quantidade de containers que chegam a cada semana: "))
soma = 0
i = 0 #variavel contadora de semanas

while(n>q):
	soma = (soma * n )/n
	i= i + i
print(soma)

-- EXECUTION TIME:
602.155
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:18:04) 
-- CODE:
n = int(input("capaciade do containers: "))
e = int(input("estoque inicial: "))
q = int(inoput("quantidade que chega por semana: "))
soma = 0 #variavel acumuladora
i = 0 #variavel contadora de semanas

while(e>n):
	if(q<n):
	soma = ((soma * n )/n)+q
	i = i + 1
print(i)

-- ERROR:
File "XXXX", line 9
    soma = ((soma * n )/n)+q
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:20:59) 
-- CODE:
n = int(input("capaciade do containers: "))
e = int(input("estoque inicial: "))
q = int(inoput("quantidade que chega por semana: "))
soma = 0 #variavel acumuladora
i = 0 #variavel contadora de semanas

while(e>n):
	if(q<n):
	soma =( e + q) -n
	i = i + 1
print(i)

-- ERROR:
File "XXXX", line 9
    soma =( e + q) -n
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
